<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation = "vertical"
  android:id="@+id/relativeLayout1"
  >

   

   

   

    

    

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        >

        <TableRow
            android:id="@+id/tablerow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
          <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/bu_marker"
        
        android:layout_centerInParent= "true"
        android:id="@+id/imageView1">
    </ImageView>
            
          <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView1" 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/convenience"
        android:gravity="center"
        android:textColor="@android:color/black">
    </TextView>   
        </TableRow>

        <TableRow
            android:id="@+id/tablerow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
           <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/cafe_marker"
        
        android:layout_centerInParent= "true"
        android:id="@+id/imageView2">
    </ImageView>
           <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView2" 
       
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/cafe"
        android:gravity="center"
        android:textColor="@android:color/black">
    </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tablerow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/truck_marker"
        
        android:layout_centerInParent= "true"
        android:id="@+id/imageView3">
    </ImageView>
           <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       
        android:gravity="center"
        android:text="@string/foodtrucks"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" >

    </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tablerow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/grocery_marker"
        
        android:layout_centerInParent= "true"
        android:id="@+id/imageView4">
    </ImageView>
           <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView4" 
        
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text= "@string/grocery"
        android:gravity="center"
        android:textColor="@android:color/black">
    </TextView>
        </TableRow>
        <TableRow
            android:id="@+id/tablerow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/dinein_marker"
        
        android:layout_centerInParent= "true"
        android:id="@+id/imageView5">
    </ImageView>
           <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView5" 
        
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/restaurants"
        android:gravity="center"
        android:textColor="@android:color/black">
    </TextView>
        </TableRow>
        
    </TableLayout>

</RelativeLayout>